--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.2",
+    "chart.js": "^4.5.0",
     "echarts": "^5.4.3",
     "element-plus": "^2.4.3",
     "pinia": "^2.1.7",
     "vue": "^3.3.10",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
